tests/NormalTests/paczka1/fuzzy1/78125715.err
Error in line 2: KI2 S169 33,7
Error in line 32: 3Bi S169 131,1
Error in line 31: BJLOp A744 47,9
Error in line 34: 3Bi A290 80,4
